[package]
name = "qmk-virtual-keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-num = "1"
hidapi = "2.4.1"
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-i3ipc = "0.16.0"
async-trait = "0.1"
simple_logger = "4"
